{
  "@@locale": "en",
  "about": "About",
  "@about": {},
  "all": "All",
  "@all": {},
  "apply": "Apply",
  "@apply": {},
  "check_for_update": "Check for Update",
  "@check_for_update": {},
  "clear_search_history": "Clear search history",
  "@clear_search_history": {},
  "clear_search_history_success": "Search history cleared.",
  "@clear_search_history_success": {},
  "credits": "Credits",
  "@credits": {},
  "detail_episode_count": "{count} eps",
  "@detail_episode_count": {
    "placeholders": {
      "count": {}
    }
  },
  "detail_runtime": "{runtime} min",
  "@detail_runtime": {
    "placeholders": {
      "runtime": {}
    }
  },
  "developer": "Developer",
  "@developer": {},
  "do_search": "Search",
  "@do_search": {},
  "episode_item": "Episode {number}",
  "@episode_item": {
    "placeholders": {
      "number": {}
    }
  },
  "episodes": "Episodes",
  "@episodes": {},
  "error_fetch": "Failed to fetch",
  "@error_fetch": {},
  "filter": "Filter",
  "@filter": {},
  "filter_and_sort": "Filter and Sort",
  "@filter_and_sort": {},
  "filter_sort_alpha_asc": "Alphabetically (A-Z)",
  "@filter_sort_alpha_asc": {},
  "filter_sort_alpha_desc": "Alphabetically (Z-A)",
  "@filter_sort_alpha_desc": {},
  "filter_sort_rating_high": "High Rating",
  "@filter_sort_rating_high": {},
  "filter_sort_rating_low": "Low Rating",
  "@filter_sort_rating_low": {},
  "filter_sort_recent": "Most Recent",
  "@filter_sort_recent": {},
  "general": "General",
  "@general": {},
  "genre": "Genre",
  "@genre": {},
  "info": "Info",
  "@info": {},
  "language": "Language",
  "@language": {},
  "language_updated": "Language updated. Restart the app to see the changes.",
  "@language_updated": {},
  "movie": "Movie",
  "@movie": {},
  "newly_added": "Newly Added",
  "@newly_added": {},
  "no_episodes": "No episodes found",
  "@no_episodes": {},
  "no_subscriptions": "No active subscription found. Subscribe to a series to receive notification when a new episode gets added.",
  "@no_subscriptions": {},
  "phone_auth_change_number": "Change number",
  "@phone_auth_change_number": {},
  "phone_auth_header_text": "Sign in using your phone number",
  "@phone_auth_header_text": {},
  "phone_auth_send_sms": "Send SMS code",
  "@phone_auth_send_sms": {},
  "phone_auth_sent_success": "Enter the {digit}-digit code that was sent to {number} via SMS",
  "@phone_auth_sent_success": {},
  "phone_auth_verify": "Verify",
  "@phone_auth_verify": {},
  "phone_auth_verify_header_text": "Verify SMS code",
  "@phone_auth_verify_header_text": {},
  "play": "Play",
  "@play": {},
  "recommended": "Recommended",
  "@recommended": {},
  "related": "Related",
  "@related": {},
  "reserved_word_return": "Return",
  "@reserved_word_return": {},
  "reset": "Reset",
  "@reset": {},
  "search": "Search",
  "@search": {},
  "series": "Series",
  "@series": {},
  "settings": "Settings",
  "@settings": {},
  "share": "Share",
  "@share": {},
  "sign_in_anonymous": "Continue without signing in",
  "@sign_in_anonymous": {},
  "sign_in_facebook": "Sign in with Facebook",
  "@sign_in_facebook": {},
  "sign_in_google": "Sign in with Google",
  "@sign_in_google": {},
  "sign_in_number": "Sign in with Phone",
  "@sign_in_number": {},
  "signout": "Signout",
  "@signout": {},
  "sort": "Sort by",
  "@sort": {},
  "sort_asc": "Asc",
  "@sort_asc": {},
  "sort_desc": "Desc",
  "@sort_desc": {},
  "source_chooser_title": "Choose source",
  "@source_chooser_title": {},
  "source_code": "Source code",
  "@source_code": {},
  "subscribe": "Subscribe",
  "@subscribe": {},
  "subscribe_success": "Subscribed. You'll get notified when a new episode is added.",
  "@subscribe_success": {},
  "subscriptions": "Subscriptions",
  "@subscriptions": {},
  "synopsis": "Synopsis",
  "@synopsis": {},
  "tabs_browse": "Browse",
  "@tabs_browse": {},
  "tabs_discover": "Discover",
  "@tabs_discover": {},
  "tabs_library": "Library",
  "@tabs_library": {},
  "tabs_search": "Search",
  "@tabs_search": {},
  "theme": "Theme",
  "@theme": {},
  "theme_dark": "Dark",
  "@theme_dark": {},
  "theme_light": "Light",
  "@theme_light": {},
  "theme_system": "System",
  "@theme_system": {},
  "top_movies": "Top Movies",
  "@top_movies": {},
  "top_series": "Top Series",
  "@top_series": {},
  "trailer": "Trailer",
  "@trailer": {},
  "trending": "Trending",
  "@trending": {},
  "type": "Type",
  "@type": {},
  "unsubscribe": "Unsubscribe",
  "@unsubscribe": {},
  "unsubscribe_success": "Unsubscribed.",
  "@unsubscribe_success": {}
}