...
import '../../../domain/entities/anime_filter.dart';
import '../../../domain/entities/genre.dart';
import '../../genre/cubit/genre_list_cubit.dart';
import '../cubit/browse_filter_cubit.dart';

class FilterDialog extends StatefulWidget {
  const FilterDialog({Key key}) : super(key: key);

  @override
  _FilterDialogState createState() => _FilterDialogState();
}

class _FilterDialogState extends State<FilterDialog> {
...
                        children: [
                          Text(
                            '${TR.of(context).sort.toUpperCase()}:',
                            style: _labelStyle,
                          ),
                          DropdownButtonFormField<FilterOrderBy>(
                            key: const Key('FilterSortDropdownButton'),
                            items: _sortMap.entries
                                .map(
                                  (e) => DropdownMenuItem(
                                    value: e.key,
                                    child: Text(e.value),
                                  ),
...
